--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 numpy
 ounce>=1.1.0,<2.0
--e git://github.com/lace/polliwog.git@b18ab1c07c9be3b9762ae105488a8800d0547c41#egg=polliwog
+polliwog==1.0.0b7
 vg>=1.7.0,<2.0
