--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   main:
     docker:
-      - image: circleci/python:3
+      - image: circleci/python:3.7
 
     steps:
       - checkout
@@ -38,6 +38,27 @@ jobs:
             . venv/bin/activate
             ./dev.py doc
 
+  lint:
+    docker:
+      - image: circleci/python:3.7
+
+    steps:
+      - checkout
+
+      - run:
+          name: Install python dependencies
+          command: |
+            mkdir -p venv
+            virtualenv venv
+            . venv/bin/activate
+            set -o pipefail; pip install --upgrade -r requirements_dev.txt | cat
+
+      - run:
+          name: Show versions
+          command: |
+            . venv/bin/activate
+            pip freeze
+
       - run:
           name: Check lint
           when: always
@@ -47,7 +68,7 @@ jobs:
 
   format:
     docker:
-      - image: circleci/python:3
+      - image: circleci/python:3.7
 
     steps:
       - checkout
@@ -79,6 +100,7 @@ workflows:
   on-commit:
     jobs:
       - main
+      - lint
       - format
 
   daily:
@@ -90,4 +112,5 @@ workflows:
               only: master
     jobs:
       - main
+      - lint
       - format
