--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">= 3.7, <4"
-numpy = "< 1.19.0"
+python = ">=3.7,<4"
+numpy = "<1.19.0"
 ounce = ">=1.1.0,<2.0"
-polliwog = "1.0.0b14"
-vg = ">= 1.11.1"
+polliwog = ">=1.0.0,<2.0"
 tinymetabobjloader = {version = "2.0.0a0", optional = true}
+vg = ">=2.0.0"
 
 [tool.poetry.extras]
 obj = ["tinymetabobjloader"]
