--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ classifiers = [
 python = ">=3.7,<4"
 numpy = "<1.19.0"
 ounce = ">=1.1.0,<2.0"
-polliwog = ">=1.0.0,<2.0"
+polliwog = ">=1.1.0,<2.0"
+# polliwog = {git = "https://github.com/lace/polliwog.git", branch = "slice-triangles"}
 tinymetabobjloader = {version = "2.0.0a0", optional = true}
 vg = ">=2.0.0"
 
