--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 python = ">=3.7,<4"
 numpy = "<1.19.0"
 ounce = ">=1.1.0,<2.0"
-polliwog = ">=2.1.0,<3.0"
+polliwog = ">=3.0.0a3"
 # polliwog = {git = "https://github.com/lace/polliwog.git", branch = "slice-mapping"}
 tinymetabobjloader = {version = "2.0.0a0", optional = true}
 vg = ">=2.0.0"
