--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 with_python: &with_python
   docker:
-    - image: circleci/python:3.7
+    - image: cimg/python:3.7
 
 install_poetry: &install_poetry
   run:
