--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,13 +42,14 @@ flake8-import-order = "0.18.1"
 myst-parser = "0.15.1"
 pytest = "6.2.4"
 pytest-cov = "2.12.1"
+# Lint requires setuptools.
+setuptools = "65.5.0"
 Sphinx = "4.1.0"
 sphinxcontrib-apidoc = "0.3.0"
 
 
 [build-system]
-# Lint requires setuptools.
-requires = ["setuptools", "poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.coverage.report]
