--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples/tinyobjloader"]
 	path = examples/tinyobjloader
-	url = git@github.com:syoyo/tinyobjloader.git
+	url = git@github.com:tinyobjloader/tinyobjloader.git
