--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 with_python: &with_python
   docker:
-    - image: cimg/python:3.7
+    - image: cimg/python:3.9
 
 install_poetry: &install_poetry
   run:
@@ -54,6 +54,12 @@ jobs:
           name: Run the build
           when: always
           command: poetry build
+
+      - run:
+          name: run tests on latest numpy
+          command: |
+            pip install numpy==1.23.4
+            ./dev.py coverage
 
       - store_artifacts:
           path: dist
