--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,12 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+[tool.poetry.scripts]
+convert_units = "lacecore_cli.convert_units:convert_units"
+
 [tool.poetry.dependencies]
 python = ">=3.7,<4"
+click = {version = ">=8.1.3,<9", optional = true}
 numpy = "*"
 ounce = ">=1.1.0,<2.0"
 polliwog = ">=3.0.0a3"
@@ -30,11 +34,11 @@ tinymetabobjloader = {version = "2.0.0a0", optional = true}
 vg = ">=2.0.0"
 
 [tool.poetry.extras]
+cli = ["click", "tinymetabobjloader"]
 obj = ["tinymetabobjloader"]
 
 [tool.poetry.dev-dependencies]
 black = "22.10.0"
-click = "8.1.3"
 coverage = "6.5.0"
 executor = "23.2"
 flake8 = "5.0.4"
