--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       run: ./dev.py lint
 
   run_tests:
-    name: Run tests - Python ${{ matrix.python-version }} with NumPy ${{ matrix.numpy-version }}
+    name: Run tests - Python ${{ matrix.python-version }}, NumPy ${{ matrix.numpy-version }}
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || (github.event_name == 'schedule' && github.ref == 'refs/heads/main')
 
@@ -71,12 +71,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Install NumPy ${{ matrix.numpy-version }}
+      run: poetry add numpy==${{ matrix.numpy-version }}
+
     - uses: ./.github/workflows/common
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Install NumPy ${{ matrix.numpy-version }}
-      run: poetry add numpy==${{ matrix.numpy-version }}
 
     - name: Run tests
       run: ./dev.py coverage
