--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
     if: github.event_name == 'push' || (github.event_name == 'schedule' && github.ref == 'refs/heads/main')
 
     strategy:
+      fail-fast: false
       matrix:
         include:
           - python-version: '3.9'
@@ -70,9 +71,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Install NumPy ${{ matrix.numpy-version }}
-      run: poetry add numpy==${{ matrix.numpy-version }}
 
     - uses: ./.github/workflows/common
       with:
