--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         numpy-version: ${{ matrix.numpy-version }}
-        extras-param: '--extras test'
+        extras-param: '--extras test --extras obj --extras cli'
 
     - name: Run tests
       run: ./dev.py coverage
