--- a/.github/workflows/common/action.yml
+++ b/.github/workflows/common/action.yml
@@ -38,11 +38,11 @@ runs:
       shell: bash
       run: test -d .venv || python -m venv .venv
 
-    - name: Pre-install NumPy ${{ inputs.numpy-version }}
+    - name: Install NumPy ${{ inputs.numpy-version }}
       shell: bash
       run: . .venv/bin/activate && pip install numpy==${{ inputs.numpy-version }}
 
-    - name: Install dependencies (excluding numpy) using Poetry
+    - name: Install dependencies (excluding numpy)
       shell: bash
       run: |
         poetry export -f requirements.txt ${{ inputs.extras-param }} --without-hashes | \
