--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: CI
 
 on:
   push:
@@ -18,6 +18,8 @@ jobs:
       uses: actions/checkout@v4
 
     - uses: ./.github/workflows/common
+      with:
+        extras-param: '--extras format'
 
     - name: Check code format
       run: ./dev.py black-check
@@ -46,28 +48,42 @@ jobs:
       uses: actions/checkout@v4
 
     - uses: ./.github/workflows/common
+      with:
+        extras-param: '--extras lint'
 
     - name: Check lint
       run: ./dev.py lint
 
   run_tests:
-    name: Run tests and check coverage
+    name: Run tests - Python ${{ matrix.python-version }}, NumPy ${{ matrix.numpy-version }}
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || (github.event_name == 'schedule' && github.ref == 'refs/heads/main')
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - python-version: '3.9'
+            numpy-version: '1.21.1'
+          - python-version: '3.10'
+            numpy-version: '1.23.0'
+          - python-version: '3.11'
+            numpy-version: '2.4.2'
+          - python-version: '3.12'
+            numpy-version: '2.4.2'
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
     - uses: ./.github/workflows/common
+      with:
+        python-version: ${{ matrix.python-version }}
+        numpy-version: ${{ matrix.numpy-version }}
+        extras-param: '--extras test --extras obj --extras cli'
 
-    - name: Run tests and check coverage
+    - name: Run tests
       run: ./dev.py coverage
-
-    - name: Run tests on NumPy 1.24.1
-      run: |
-        pip install numpy==1.24.1
-        ./dev.py test
 
   build_and_upload:
     name: Build and upload
@@ -79,6 +95,8 @@ jobs:
       uses: actions/checkout@v4
 
     - uses: ./.github/workflows/common
+      with:
+        extras-param: '--extras doc'
 
     - name: Build the package
       run: poetry build
