--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ numpy = "*"
 ounce = ">=1.1.0,<2.0"
 polliwog = ">=3.0.0a3"
 # polliwog = {git = "https://github.com/lace/polliwog.git", branch = "slice-mapping"}
-tinymetabobjloader = {version = "2.0.0a0", optional = true}
+tinyobjloader = {version = "2.0.0rc9", optional = true}
 vg = ">=2.0.0"
 black = {version = "23.3.0", optional = true}
 coverage = {version = "7.2.7", optional = true}
@@ -45,8 +45,8 @@ Sphinx = {version = "4.3.2", optional = true}
 sphinxcontrib-apidoc = {version = "0.3.0", optional = true}
 
 [tool.poetry.extras]
-cli = ["click", "tinymetabobjloader"]
-obj = ["tinymetabobjloader"]
+cli = ["click", "tinyobjloader"]
+obj = ["tinyobjloader"]
 doc = ["executor", "click", "sphinx", "sphinxcontrib-apidoc", "myst-parser"]
 lint = ["executor", "click", "setuptools", "flake8", "flake8-import-order"]
 format = ["executor", "click", "black"]
