--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ numpy = "*"
 ounce = ">=1.1.0,<2.0"
 polliwog = ">=3.0.0a3"
 # polliwog = {git = "https://github.com/lace/polliwog.git", branch = "slice-mapping"}
-tinyobjloader = {version = "2.0.0rc12", optional = true}
+tinymetabobjloader = {version = "2.0.0rc14.dev2", optional = true}
 vg = ">=2.0.0"
 black = {version = "23.3.0", optional = true}
 coverage = {version = "7.2.7", optional = true}
