--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ Sphinx = {version = "4.3.2", optional = true}
 sphinxcontrib-apidoc = {version = "0.3.0", optional = true}
 
 [tool.poetry.extras]
-cli = ["click", "tinyobjloader"]
-obj = ["tinyobjloader"]
+cli = ["click", "tinymetabobjloader"]
+obj = ["tinymetabobjloader"]
 doc = ["executor", "click", "sphinx", "sphinxcontrib-apidoc", "myst-parser"]
 lint = ["executor", "click", "setuptools", "flake8", "flake8-import-order"]
 format = ["executor", "click", "black"]
