--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,11 @@ jobs:
       matrix:
         include:
           - python-version: '3.10'
-            numpy-version: '1.23.0'
+            numpy-version: '1.26.4'
+          - python-version: '3.11'
+            numpy-version: '1.26.4'
+          - python-version: '3.12'
+            numpy-version: '1.26.4'
           - python-version: '3.11'
             numpy-version: '2.4.2'
           - python-version: '3.12'
