--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,10 @@ jobs:
             numpy-version: '2.4.2'
           - python-version: '3.12'
             numpy-version: '2.4.2'
+          - python-version: '3.13'
+            numpy-version: '2.4.2'
+          - python-version: '3.14'
+            numpy-version: '2.4.2'
 
     steps:
     - name: Checkout repository
